welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:22: error: type mismatch;
 found   : Unit
 required: Array[java.awt.Color]
  for (cpt1 <-0 to getMondeHauteur - 1) {
            ^